--- a/public/static/css/layout.css
+++ b/public/static/css/layout.css
@@ -1,26 +1,5 @@
-/*
-=====================================================================
 
-   TOC:
-   a. Common Styles.
-   b. Header Styles.
-   c. Intro Section - Main Page.
-   d. Info Section - Main Page.
-   e. Works Section - Main Page.
-   f. Journal Section - Main Page.
-   g. Call-To-Action Section - Main Page.
-   h. Tweets Section - Main Page.
-   i. Blog.
-   j. Porfolio.
-   k. About.
-   l. Contact.
-   m. Footer.
-
-===================================================================== */
-
-/* ------------------------------------------------------------------ */
-
-/* a. Common Styles
+/* Common Styles
 /* ------------------------------------------------------------------ */
 
 body {
@@ -342,16 +321,12 @@ ul#nav ul li a {
    font-size: 13px;
 }
 
-/* ------------------------------------------------------------------ */
-
-/* c. Intro Section - Main Page
+/* Intro Section - Main Page
 /* ------------------------------------------------------------------ */
 
 #intro {
    background: #121212;
 }
-
-/* ------------------------------------------------------------------ */
 
 /* Contact
 /* ------------------------------------------------------------------ */
@@ -391,8 +366,6 @@ ul#nav ul li a {
 #contact-form span.required {
    color: #11ABB0;
 }
-
-/* ------------------------------------------------------------------ */
 
 /* footer
 /* ------------------------------------------------------------------ */
@@ -492,4 +465,5 @@ footer .copyright li:before {
 footer .copyright li:first-child:before {
    display: none;
 }
+
 
